# VirtualShadowMaps

./: .gitignore  BUILD.md  INTEGRATION.md  README.md  build.ps1
Shaders/: Lighting.hlsl
Shaders/LightLimitFix/: Common.hlsli  LightLimitFix.hlsli
Shaders/VirtualShadowMaps/: VSM.hlsli
feature/: VirtualShadowMaps.cpp  VirtualShadowMaps.h
plugin/: CMakeLists.txt  vcpkg.json
plugin/cmake/: Plugin.h.in
plugin/include/: PCH.h
plugin/src/: Plugin.cpp  VSMBuildConfig.h  VSMConfig.cpp  VSMConfig.h  VSMConstants.h  VSMInternal.h  VirtualShadowMaps.cpp  VirtualShadowMaps.h  VirtualShadowMaps_Diagnostics.cpp  VirtualShadowMaps_Diagnostics.h
